# aws-bedrock-handson

./: .gitignore  models.json  pyproject.toml
aws_bedrock_handson/chapter2/: image.py  invoke_model.py  list_models.py  stream.py
aws_bedrock_handson/chapter3/: 1_langchain.py  2_stream.py  3_streamlit.py  4_with_dynamo.py
aws_bedrock_handson/chapter4/: 1_rag.py
aws_bedrock_handson/chapter5/: 1_langchain-agent.py  2_langchain-react-agent.py  7_agent-for-bedrock.py
