[tool.poetry]
name = "aws-bedrock-handson"
version = "0.1.0"
description = ""
authors = ["yuichkun <yuichkun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.139"
boto3-stubs = "^1.34.139"
langchain = "^0.2.6"
langchain-aws = "^0.1.9"
langchain-community = "^0.2.6"
streamlit = "^1.36.0"
python-dateutil = "^2.9.0.post0"
asyncio = "^3.4.3"
beautifulsoup4 = "^4.12.3"
duckduckgo-search = "^6.1.12"
langchainhub = "^0.1.20"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
